# un7z

./: CMakeLists.txt  README.md  un7z.c  un7z.h
tests/: CMakeLists.txt  test_unzip.c
tests/testdata/: file2.txt
